--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
+
+
+.header {
+  font-size: 2rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 1rem auto;
+  font-weight: bold;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  min-width: fit-content;
+  height: 3rem;
+  font-size: 2rem;
+  border-radius: 8px;
+  background-color: rgb(59, 59, 62);
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button:hover {
+  background-color: lightgreen;
+  color: black;
+}
+
+
+.footer {
+  width: -moz-fit-content;
+  width: fit-content;
 }
